<?xml version="1.0" encoding="UTF-8"?>
<!-- 
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
   <groupId>org.apache</groupId>
   <artifactId>apache</artifactId>
   <version>9</version>
  </parent>
  <groupId>org.apache.ddlutils</groupId>
  <artifactId>ddlutils</artifactId>
  <packaging>jar</packaging>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<version>1.1</version>
  <name>Apache DdlUtils</name>
  <description>
    DdlUtils is a small, easy-to-use component for working with Database Definition (DDL) files.
  </description>
  <inceptionYear>2005</inceptionYear>
  <url>http://db.apache.org/ddlutils</url>
  
  <mailingLists>
    <mailingList>
      <name>Ddlutils Dev List</name>
      <post>ddlutils-dev@db.apache.org</post>
      <subscribe>ddlutils-dev-subscribe@db.apache.org</subscribe>
      <unsubscribe>ddlutils-dev-unsubscribe@db.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/db-ddlutils-dev/</archive>
      <otherArchives>
        <otherArchive>http://www.mail-archive.com/ddlutils-dev@db.apache.org/</otherArchive>
        <otherArchive>http://www.nabble.com/Apache-DdlUtils---Dev-f14475.html</otherArchive>
      </otherArchives>
    </mailingList>
    <mailingList>
      <name>Ddlutils User List</name>
      <post>ddlutils-user@db.apache.org</post>
      <subscribe>ddlutils-user-subscribe@db.apache.org</subscribe>
      <unsubscribe>ddlutils-user-unsubscribe@db.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/db-ddlutils-user/</archive>
      <otherArchives>
        <otherArchive>http://www.mail-archive.com/ddlutils-user@db.apache.org/</otherArchive>
        <otherArchive>http://www.nabble.com/Apache-DdlUtils---User-f14474.html</otherArchive>
      </otherArchives>
    </mailingList>
  </mailingLists>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.apache.org/jira/browse/DDLUTILS</url>
  </issueManagement>

  <developers>
    <developer>
      <id>tomdz</id>
      <name>Thomas Dudziak</name>
      <email>tomdz@apache.org</email>
      <organization>ASF</organization>
    </developer>
    <developer>
      <id>mvdb</id>
      <name>Martin van den Bemt</name>
      <email>mvdb@apache.org</email>
      <organization>ASF</organization>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/db/ddlutils/trunk/</connection>
    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/db/ddlutils/trunk/</developerConnection>
    <url>http://svn.apache.org/viewcvs.cgi/db/ddlutils/trunk/</url>
  </scm>

  <distributionManagement>
    <site>
      <id>apache.website</id>
      <url>scp://minotaur.apache.org/www/db.apache.org/ddlutils/</url>
    </site>
  </distributionManagement>

  <dependencies>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.9.16</version>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
	<dependency>
	  <groupId>org.jodd</groupId>
	  <artifactId>jodd-util</artifactId>
	  <version>6.2.2</version>
	</dependency>
	<dependency>
	  <groupId>commons-codec</groupId>
	  <artifactId>commons-codec</artifactId>
	  <version>1.16.0</version>
	</dependency>
	  <dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-collections4</artifactId>
		  <version>4.4</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-dbcp2</artifactId>
		  <version>2.9.0</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-lang3</artifactId>
		  <version>3.13.0</version>
	  </dependency>
<!--    <dependency>-->
<!--      <groupId>commons-logging</groupId>-->
<!--      <artifactId>commons-logging-api</artifactId>-->
<!--      <version>1.0.4</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>commons-logging</groupId>-->
<!--      <artifactId>commons-logging</artifactId>-->
<!--      <version>1.0.4</version>-->
<!--    </dependency>-->
	  <dependency>
		  <groupId>org.apache.commons</groupId>
		  <artifactId>commons-pool2</artifactId>
		  <version>2.11.1</version>
	  </dependency>
<!--    <dependency>-->
<!--      <groupId>dom4j</groupId>-->
<!--      <artifactId>dom4j</artifactId>-->
<!--      <version>1.4</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->
	  <dependency>
		  <groupId>org.junit.jupiter</groupId>
		  <artifactId>junit-jupiter-api</artifactId>
		  <version>5.9.1</version>
		  <scope>test</scope>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.logging.log4j</groupId>
		  <artifactId>log4j-api</artifactId>
		  <version>2.20.0</version>
	  </dependency>
	  <dependency>
		  <groupId>org.apache.logging.log4j</groupId>
		  <artifactId>log4j-core</artifactId>
		  <version>2.20.0</version>
	  </dependency>
	  <dependency>
		  <groupId>org.codehaus.woodstox</groupId>
		  <artifactId>stax2-api</artifactId>
		  <version>4.2.1</version>
	  </dependency>
	  <dependency>
		  <groupId>com.fasterxml.woodstox</groupId>
		  <artifactId>woodstox-core</artifactId>
		  <version>6.5.1</version>
	  </dependency>
	  <dependency>
		  <groupId>org.dom4j</groupId>
		  <artifactId>dom4j</artifactId>
		  <version>2.1.4</version>
	  </dependency>
	  <dependency>
		  <groupId>com.google.code.findbugs</groupId>
		  <artifactId>jsr305</artifactId>
		  <version>3.0.2</version>
	  </dependency>
<!-- 
    <dependency>
      <groupId>axion</groupId>
      <artifactId>axion</artifactId>
      <version>1.0-M3-dev</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.derby</groupId>
      <artifactId>derbyclient</artifactId>
      <version>10.1.2.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>1.8.0.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>mckoi</groupId>
      <artifactId>mckoi</artifactId>
      <version>1.0.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>3.1.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>8.1-404.jdbc3</version>
      <scope>test</scope>
    </dependency>
 -->
    <!-- NB: No public driver for DB2, interbase, sapdb, oracle, sqlserver -->
	  <dependency>
		  <groupId>org.hsqldb</groupId>
		  <artifactId>hsqldb</artifactId>
		  <version>2.7.2</version>
		  <scope>test</scope>
	  </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>checkstyle</id>
      <build>
        <defaultGoal>checkstyle:checkstyle</defaultGoal>
	    <plugins>
	      <plugin>
	        <groupId>org.apache.maven.plugins</groupId>
	        <artifactId>maven-checkstyle-plugin</artifactId>
            <configuration>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
              <configLocation>src/main/checkstyle/ddlutils-checks.xml</configLocation>
              <headerLocation>src/main/checkstyle/license-check.txt</headerLocation>
            </configuration>
	      </plugin>
	      </plugins>
	  </build>
    </profile>

    <profile>
	  <id>hsqldb</id>
      <activation>
        <property>
          <name>testDb</name>
          <value>hsqldb</value>
        </property>
      </activation>
      <dependencies>
		  <dependency>
			  <groupId>org.hsqldb</groupId>
			  <artifactId>hsqldb</artifactId>
			  <version>2.7.2</version>
			  <scope>test</scope>
		  </dependency>
      </dependencies>
	  <build>
	    <plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<systemProperties>
						<property>
							<name>jdbc.properties.file</name>
							<value>/jdbc.properties.hsqldb</value>
						</property>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
	    </plugins>
	  </build>
    </profile>
  </profiles>

<!--  <reporting>-->
<!--    <plugins>-->
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-project-info-reports-plugin</artifactId>-->
<!--        <version>2.4</version>-->
<!--        <reportSets>-->
<!--          <reportSet>-->
<!--            <reports></reports>-->
<!--          </reportSet>-->
<!--        </reportSets>-->
<!--      </plugin>-->
<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-javadoc-plugin</artifactId>-->
<!--        <version>2.8</version>-->
<!--        <configuration>-->
<!--          <stylesheetfile>src/site/javadoc/stylesheet.css</stylesheetfile>-->
<!--        </configuration>-->
<!--      </plugin>-->
<!--      <plugin>-->
<!--        <groupId>org.tomdz.maven</groupId>-->
<!--        <artifactId>sphinx-maven-plugin</artifactId>-->
<!--        <version>1.0.0-SNAPSHOT</version>-->
<!--      </plugin>-->
<!--    </plugins>-->
<!--  </reporting>-->
</project>
